--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
 
             <button type="submit">Salvar em CSV</button>
-            <button type="button" onclick="window.print()">Imprimir / Salvar pdf</button>
+            <button type="button" class="button" onclick="window.print()">Imprimir / Salvar pdf</button>
         </form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
